--- a/Week5/Day2/DailyChallenge/index.html
+++ b/Week5/Day2/DailyChallenge/index.html
@@ -6,11 +6,12 @@
 <body>
 	<form id="formID" action="index.html" method="GET">
 		<div>
-			<label for="username">Name</label>
-			<input type="text" name="user" id="gif" placeholder="enter">
+			<label for="gif">Category</label>
+			<input type="text" name="category" id="gif" placeholder="enter">
 		</div>
 			<button type="submit">Send!</button>
 	</form> 
+	<button id ="deleteall">Delete All</button>
     <section id="container">
 
     </section>
